force-app/main/default/objects/KPI_Result__c/KPI_Result__c.object-meta.xml
<CustomObject>
    <label>KPI Result</label>
    <nameField>
        <label>KPI Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>