force-app/main/default/objects/KPI_Result__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Code</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KPI Result</relationshipLabel>
    <relationshipName>KPI_Result</relationshipName>
    <type>Lookup</type>
</CustomField>