force-app/main/default/objects/KPI_Result__c/fields/KPI_Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>KPI_Actual_Value__c</fullName>
    <label>KPI Actual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>