force-app/main/default/objects/KPI_Result__c/fields/KPI_Define__c.field-meta.xml
<CustomField>
    <fullName>KPI_Define__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Define</label>
    <referenceTo>KPI_Define_Managment__c</referenceTo>
    <relationshipLabel>KPI Result</relationshipLabel>
    <relationshipName>KPI_Result</relationshipName>
    <type>Lookup</type>
</CustomField>