force-app/main/default/objects/KPI_Result__c/fields/KPI_Range__c.field-meta.xml
<CustomField>
    <fullName>KPI_Range__c</fullName>
    <label>KPI Range %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>