force-app/main/default/objects/KPI_Result__c/fields/KPI_Rate__c.field-meta.xml
<CustomField>
    <fullName>KPI_Rate__c</fullName>
    <label>KPI Rate/ %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>