force-app/main/default/objects/KPI_Result__c/fields/Satus__c.field-meta.xml
<CustomField>
    <fullName>Satus__c</fullName>
    <label>Satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Calculating</fullName>
            </value>
            <value>
                <fullName>Confirming</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>